# VE482-Operating-Systems

./: README.md
homework/h1/: README.md  h1.sh
homework/h3/: CMakeLists.txt  README.md  linkedlist.c  linkedlist.h  main.c
homework/h4/: README.md  flock.sh  racing.sh  semaphore.c  text.txt
homework/h5/banker_alg/: README.md  input  main.py
lab/l10/: dicedevice.rules  gp  lab10.tex  su
lab/l11/: Makefile  lab11_report.md  lemondbfs.c
lab/l11/lemondbfs/: README.md  del.tar.bz2
lab/l2/: hello.sh
lab/l3/: ShanghaiAir.sh  aq_temp.sh  raw  sh_air.sh  test.txt
lab/l4/: Lab4 Report.md  db.csv
lab/l5/: gui.h  linkedlist.c  linkedlist.h  old.c
lab/l6/: README.md
lab/l6/dadfs/: base.c
lab/l6/linked/: gui.c  input.csv  linked-csv.c  linked-csv.h  linkedlist.c  logic.c  logic.h  main.c  new.c  old.c  plugin.c  plugin.h  plugin.xml
lab/l6/zathura-txt/: CMakeLists.txt  document.c  internal.h  page.c  plugin.c  plugin.h  render.c
lab/l7/: README.md  VE482 Lab7 Linux Kernel.md
lab/l7/dadfs/: base.c
lab/l8/: VE482 Lab8.md  region.c
lab/l9/: Lab 9 Report.md
lab/l9/dice/: dice.c  dice.h
lab/l9/src/: README.md  (+2 more)
project/p1/: CMakeLists.txt  README.md  execute.c  execute.h  jojCMakeLists.txt  main.c  parse.c  parse.h  read.c  read.h  redirect.c  redirect.h  terminalrun
project/p2/: CMakeLists.txt  README.md  main.cpp
project/p2/db/: Database.cpp  Table.cpp  Table.h
project/p2/query/: Listen.cpp  Listen.h  Query.h  QueryBuilders.cpp  QueryResult.h
project/p2/query/data/: AddQuery.cpp  AddQuery.h  CountQuery.cpp  CountQuery.h  DeleteQuery.cpp  DeleteQuery.h  DuplicateQuery.cpp  DuplicateQuery.h  MaxQuery.cpp  MaxQuery.h  MinQuery.cpp  MinQuery.h  SelectQuery.cpp  SelectQuery.h  SubQuery.cpp  SubQuery.h  SumQuery.cpp  SumQuery.h  SwapQuery.cpp  SwapQuery.h
project/p2/query/management/: CopyTableQuery.cpp  CopyTableQuery.h  TruncateTableQuery.cpp  TruncateTableQuery.h
project/p2/utils/: R_W_Mutex.h  threadPool.cpp  threadPool.h
project/p3/: README.md
project/utils/: R_W_Mutex.cpp
(+36 files in other folders)
